--- a/home.html
+++ b/home.html
@@ -36,6 +36,8 @@
             <main>
                 <footer></footer>
                 <script src="scripts/script.js"></script>
+            </main>
+        </div>
 </body>
 
 </html>
